# tmp

./: .gitmodules  README.md
bash/: cert.crt  generate_ssl_cert.bash  private.key  ssh_socks_proxy.bash
c/bst/: CMakeLists.txt  simple.c
c/dbus-example/: CMakeLists.txt  dbus-server.c
c/filelogger/: CMakeLists.txt  main.c
c/libarchive/: CMakeLists.txt  Makefile  test.tar  untar.c
c/linkedlist/: CMakeLists.txt  main.c
c/propparse/: CMakeLists.txt  main.c  property.c  property.h  rc.c  rc.h  test.property
cpp/: CMakeLists.txt
cpp/asio/: CMakeLists.txt
cpp/asio/hello_server/: README.md
cpp/asio/hello_server/src/: CMakeLists.txt  server.cpp  server.hpp
cpp/asio/socket/: CMakeLists.txt  client.cc  server.cc
cpp/asio/timer/: CMakeLists.txt  timer.cc  timer2.cc  timer3.cc  timer4.cc
cpp/bin2cpp/: .gitignore  CMakeLists.txt  config.h.in  main.cpp
cpp/class/: CMakeLists.txt
cpp/class/baseclass/: Base.cpp  Base.hpp  CMakeLists.txt  German.cpp  German.hpp  Italian.cpp  Italian.hpp  Main.cpp
cpp/cmake/: FindLibSSH.cmake
cpp/cmd/: CMakeLists.txt  cmd1.cc
cpp/grpc/: rpc.grpc.pb.cc  rpc.grpc.pb.h  rpc.pb.cc  rpc.pb.h  rpc.proto
cpp/http/served/: CMakeLists.txt  http.cc
cpp/logger/: CMakeLists.txt
cpp/misc/: CMakeLists.txt  convert.cpp
cpp/net/pistache_example/: CMakeLists.txt  rest_server.cpp
cpp/openssl/: CMakeLists.txt  md5.cpp
cpp/openssl/aes256/: CMakeLists.txt  README.md
cpp/openssl/rsa_sign/: key_pair.cpp  key_pair.hpp  main.cpp  rsa_key.cpp  rsa_key.hpp  sign.cpp  sign.hpp  signature.cpp  signature.hpp  verify.cpp  verify.hpp
cpp/pty/: CMakeLists.txt  pty_master.cc
cpp/sdl2/: CMakeLists.txt  app.cxx  app.hxx  main.cxx
cpp/ssh/: CMakeLists.txt  ssh_example.cpp
cpp/templates/: CMakeLists.txt  functional1.cpp
cpp/thread/: CMakeLists.txt  mutex_data.cpp  thread1.cpp  thread2.cpp
go/: README.md
go/c/ctogo/: main.go
go/c/gotoc/: Makefile  gotoc.go  main.cpp
go/globalip/: globalip.go
go/httptester/: main.go
go/mqtt/client/publisher/: publisher.go
go/mqtt/client/subscriber/: subscriber.go
go/mqtt/srv/: srv.go
go/signalexample/: Dockerfile  signal.go
go/sshclient/: sshclient.go
go/tuiexample/: tuiexample.go
go/udpproxy/: LICENSE  main.go
js/cxx_addon/: Dockerfile  addon.cpp  binding.gyp  package-lock.json  package.json
js/ownmod/: Dockerfile  index.js  package-lock.json  package.json
js/ownmod/test/: index.js
js/typescript/: greeter.js  greeter.ts
js/websocket_example/: package.json  server.js
latex/: Makefile  brief_g-brief.tex  listing.tex  lualatex.tex  markdown.md  markdown_without.md  template.tex  uml.tex
pandoc/: test.md
python/: .gitignore  LICENSE  README.md  csvread.py  ex1.py  ex2.py  ex3.py
python/gui/: simple1.py
python/gui/gtk3/: test1.py
python/listsort/: listsort.py
python/nativebuild/: setup.py
python/nativebuild/foo/: __init__.py
python/ssh_example/: ssh_client.py
python/sshexamples/: simple.py
rb/: README.md
rb/block/: proc1.rb  yield.rb
rb/class/: .access.rb.swp  .attributes.rb.swp  .class.rb.swp  .constants.rb.swp  access.rb  attributes.rb  class.rb  constants.rb
rb/db/: INDEX.md
rb/db/sqlite3/: sqlite3.rb
rb/misc/: get_current_ip.rb  http_request.rb
rb/module/: mixin.rb  module.rb
rust/array/: Cargo.toml
rust/array/src/: main.rs
rust/book/b02-data-types/: Cargo.toml
rust/book/b02-data-types/src/: main.rs
rust/book/variables/: Cargo.toml
rust/book/variables/src/: main.rs
rust/cli/: Cargo.toml
rust/cli/src/: main.rs
rust/csvparser/: Cargo.toml
rust/csvparser/src/: main.rs
rust/json_marshal/: Cargo.toml
rust/json_marshal/src/: main.rs
rust/multifile/: Cargo.toml
rust/multifile/src/: main.rs  train.rs
rust/multifile/src/cars/: mod.rs  pkw.rs
rust/tuple/: Cargo.toml
rust/tuple/src/: main.rs
rust/udpclient/: Cargo.toml
rust/udpclient/src/: main.rs
rust/udpserver/: Cargo.toml
rust/udpserver/src/: main.rs
